--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,4 @@ phases:
       - npm run build --configuration production
   post_build:
     commands:
-      - aws s3 sync dist/epam-interview s3://epam-interview-bucket --delete
-artifacts:
-  files:
-    - '**/*'
+      - aws s3 sync dist/epam-interview/browser s3://epam-interview-bucket --delete
