buildspec.yml file is updated

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 14
+      nodejs: 18
+    commands:
+      - curl -sL https://rpm.nodesource.com/setup_18.x | bash -
+      - yum install -y nodejs
   build:
     commands:
       - npm install
